applications/mancini-beer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mancini-beer
  namespace: mancini-beer
  labels:
    app: mancini-beer
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: mancini-beer
