applications/mancini-beer/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mancini-beer
  namespace: mancini-beer
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mancini.beer`) || Host(`www.mancini.beer`)
      kind: Rule
      services:
        - name: mancini-beer
          port: 80
  tls:
    store:
      name: default
      namespace: traefik
